welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: object java.lang.String is not a value
  var d = String = ""
          ^