welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var T : Array[Color] = new Array[Color](getMondeHauteur())
  var d = String = ""
  var q = getMondeLargeur()
  var w = getMondeHauteur()
  for (i<-0 to w-2){
    T(i)=getCouleurSol();
    avance();
  }
  T(w-1) = getCouleurSol()
  for (i<-0 to q-1) {
    for (l<-0 to w-1)
    	recule();
    gauche();
    avance();
    droite();
    d = litMessage();
    for (l<-0 to w-2) {
      setCouleurBrosse(T((l+d)%w));
      baisseBrosse();
      leveBrosse();
      avance();
    }
  }
}